tests/src/frontend/typechecking/invalid/unbound_module_name.sk
module M;
fun f(): void {
  M.x()
}
